src/objects/EC_MulesoftIntegration_Custom_Codes__mdt.object
<CustomObject>
    <fields>
        <fullName>EC_CustomCodes__c</fullName>
        <label>EC_CustomCodes</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Message__c</fullName>
        <label>EC_Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Popup_Label__c</fullName>
        <description>Used to display in Lightning component</description>
        <label>Popup Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>EC_MulesoftIntegration_Custom_Codes</label>
    <pluralLabel>EC_MulesoftIntegration_Custom_Codes</pluralLabel>
</CustomObject>